# HunterGatherers

./: .gitignore  .gitmodules  Agent.cpp  Agent.h  BouncingBall.cpp  BouncingBall.h  CMakeLists.txt  Camera.cpp  Camera.h  Config.cpp  Config.h  Config.json  Dockerfile  GUI.cpp  GUI.h  Gene.cpp  Gene.h  Heart.cpp  Heart.h  LICENSE  MarkovNames.cpp  MarkovNames.h  Mushroom.cpp  Mushroom.h  OpenCL_Wrapper.cpp  OpenCL_Wrapper.h  Populater.cpp  Populater.h  Populator.cpp  Populator.h  Quadtree.cpp  Quadtree.h  README.md  Skull.cpp  World.cpp  World.h  WorldObject.cpp  WorldObject.h  main.cpp  utils.cpp
cl/: neural_net.cl
include/: Agent.h  Camera.h  Config.h  GUI.h  Gene.h  MarkovNames.h  OpenCL_Wrapper.h  Populator.h  Quadtree.h  Skull.h  World.h  WorldObject.h  utils.h
resources/: CreateSurnameMarkov.py  NamesMarkov.json
src/: Agent.cpp  BouncingBall.cpp  Config.cpp  GUI.cpp  Gene.cpp  MarkovNames.cpp  Mushroom.cpp  OpenCL_Wrapper.cpp  Populator.cpp  Quadtree.cpp  World.cpp  WorldObject.cpp  main.cpp
